<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_submit_itinerary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.app.blablawild.SubmitItineraryActivity"
    tools:showIn="@layout/activity_submit_itinerary">

    <TextView
        android:text="@string/departure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewDeparture"
        android:textSize="45px"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextDeparture"
        android:layout_below="@+id/TextViewDeparture"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/destination"
        android:textSize="45px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewDestination"
        android:layout_below="@+id/EditTextDeparture"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextDestination"
        android:layout_below="@+id/TextViewDestination"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/price"
        android:textSize="45px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewPrice"
        android:layout_below="@+id/EditTextDestination"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextPrice"
        android:layout_below="@+id/TextViewPrice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/date"
        android:textSize="45px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewDate"
        android:layout_below="@+id/EditTextPrice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextDate"
        android:layout_below="@+id/TextViewDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/houre"
        android:textSize="45px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewHoure"
        android:layout_below="@+id/EditTextDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextHoure"
        android:layout_below="@+id/TextViewHoure"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonPublish"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="41dp" />

</RelativeLayout>
