<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.app.blablawild.AccountActivity">


    <Button
        android:text="@string/ButtonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMenu"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDisplayName"
        android:layout_marginBottom="42dp"
        android:layout_above="@+id/textViewEmail"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewEmail"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textViewDisplayName"
        android:layout_alignStart="@+id/textViewDisplayName" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/wild"
        android:id="@+id/imageView1"
        android:layout_above="@+id/textViewDisplayName"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonDisconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonDisconnect"
        android:layout_marginBottom="41dp"
        android:layout_above="@+id/buttonMenu"
        android:layout_alignLeft="@+id/buttonMenu"
        android:layout_alignStart="@+id/buttonMenu" />

</RelativeLayout>
